refactor tests, add string trimming, add controller test